@@ -1,7 +1,9 @@
 * Archive.retrieve() and Archive.retrieve_by_name() now return a list of
   product paths. Archive.retrieve_by_uuid() now returns a single path.
 
-* Added Archive.delete_properties_by_uuid()
+* Added Archive.delete_properties_by_uuid().
+
+* Added object_acl option to S3 storage backend.
 
 5.0 2020-07-30
 ~~~~~~~~~~~~~~
